apps/generic/overlays/flower-shop/patches/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-shop
spec:
  strategy:
    type: Recreate
  template:
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - $patch: replace
        - name: yasr-volume
          persistentVolumeClaim:
            claimName: yasr-volume
      containers:
        - name: container
          image: harbor.dumbhome.uk/library/flower-shop:bd401f6@sha256:2620db413ddbd7838a3af5af6b6c3708125f251948f082ae7c917a852df9fb9b
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: yasr-volume
              mountPath: /data
              subPath: configs/flower-shop
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
