apps/generic/overlays/flower-shop/patches/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flower-shop
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
